# myks-gallery

./: .gitignore  AUTHORS  LICENSE  Makefile  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
example/: gallery
example/example/: asgi.py  settings.py  storages.py  urls.py  wsgi.py
gallery/: admin.py  apps.py  imgutil.py  models.py  query count.txt  storages.py  test_admin.py  test_imgutil.py  test_models.py  test_settings.py  test_storages.py  test_urls.py  test_views.py  tests.py  urls.py  views.py
gallery/locale/fr/LC_MESSAGES/: django.mo  django.po
gallery/management/commands/: scanphotos.py
gallery/migrations/: 0001_initial.py
gallery/resizers/: __init__.py  pillow.py  test_pillow.py  test_thumbor.py  thumbor.py
gallery/static/css/: gallery.css
gallery/templates/admin/gallery/: change_list.html  scan_photos.html  set_access_policy.html  unset_access_policy.html
gallery/templates/gallery/: album_archive.html  album_archive_year.html  album_detail.html  album_list.html  photo_detail.html
gallery/tests/: __init__.py  admin.py  imgutil.py  models.py  settings.py  test_imgutil.py  test_models.py  test_views.py  urls.py  views.py
gallery/tests/templates/: base.html
