[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
exclude = ".*/migrations/.*\\.py"

[tool.coverage.run]
branch = true
source = ["gallery"]

[tool.isort]
profile = "black"

[tool.poetry]
name = "myks-gallery"
version = "0.9.1"
description = "Photo gallery with granular access control"
authors = ["Aymeric Augustin <aymeric.augustin@m4x.org>"]
license = "BSD-3-Clause"
readme = "README.rst"
repository = "https://github.com/aaugustin/myks-gallery"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
]
packages = [{ include = "gallery"}]

[tool.poetry.dependencies]
django = ">=3.2"
python = "^3.6"

[tool.poetry.dev-dependencies]
coverage = {extras = ["toml"], version = "*"}
flake8 = "*"
isort = "*"
